--- a/FODS_Assignment_Sachin.ipynb
+++ b/FODS_Assignment_Sachin.ipynb
@@ -35,7 +35,7 @@
    "id": "ff35bce0",
    "metadata": {},
    "source": [
-    "#After importing our package, we then use the pd.read_csv() function to read the file containing our dataset. The file in this case is named 'top2018.csv' . "
+    "After importing our package, we then use the pd.read_csv() function to read the file containing our dataset. The file in this case is named 'top2018.csv' . "
    ]
   },
   {
