--- a/FODS_Assignment_Sachin.ipynb
+++ b/FODS_Assignment_Sachin.ipynb
@@ -7,9 +7,9 @@
    "source": [
     "####The following mini-project utilizes a dataset titled \"Spotify Top 100\" which was sourced from the website https://mavenanalytics.io/ \n",
     "\n",
-    "This dataset is a set of the 'Top 100 Songs' to top the Spotify charts in the year of 2018. The dataset's fields includes 'a unique song id' , 'song_name' , 'artist(s)' , and the 'duration of the song.' \n",
+    "####This dataset is a set of the 'Top 100 Songs' to top the Spotify charts in the year of 2018. The dataset's fields includes 'a unique song id' , 'song_name' , 'artist(s)' , and the 'duration of the song.' \n",
     "\n",
-    "There were additonal fields such as 'danceability' , 'loudness' , 'relevance' , and the like, but I chose not to include those fields into the dataset in order to keep it relatively simple. "
+    "####There were additonal fields such as 'danceability' , 'loudness' , 'relevance' , and the like, but I chose not to include those fields into the dataset in order to keep it relatively simple. "
    ]
   },
   {
@@ -17,7 +17,7 @@
    "id": "84c8803c",
    "metadata": {},
    "source": [
-    "First we import pandas. This is the package that gives us the necessary functions which we then use to perform our data analysis. "
+    "####First we import pandas. This is the package that gives us the necessary functions which we then use to perform our data analysis. "
    ]
   },
   {
@@ -35,7 +35,7 @@
    "id": "ff35bce0",
    "metadata": {},
    "source": [
-    "After importing our package, we then use the pd.read_csv() function to read the file containing our dataset. The file in this case is named 'top2018.csv' . "
+    "####After importing our package, we then use the pd.read_csv() function to read the file containing our dataset. The file in this case is named 'top2018.csv' . "
    ]
   },
   {
@@ -53,7 +53,7 @@
    "id": "790a2b96",
    "metadata": {},
    "source": [
-    "Next, we identify the features of this dataset. This is done using the pandas function data.columns"
+    "####Next, we identify the features of this dataset. This is done using the pandas function data.columns"
    ]
   },
   {
@@ -81,7 +81,7 @@
    "id": "c7085efc",
    "metadata": {},
    "source": [
-    "To check the data types of our features, we use the data.dtypes "
+    "####To check the data types of our features, we use the data.dtypes "
    ]
   },
   {
@@ -113,7 +113,7 @@
    "id": "089c29ec",
    "metadata": {},
    "source": [
-    "The next task is to perform a number summary of our dataset. Since the only numerical feature in my selected dataset is the song duration (in ms), the describe() function which we use to perform the summary primarily gives us the evaluation of that feature. "
+    "####The next task is to perform a number summary of our dataset. Since the only numerical feature in my selected dataset is the song duration (in ms), the describe() function which we use to perform the summary primarily gives us the evaluation of that feature. "
    ]
   },
   {
@@ -149,7 +149,7 @@
    "id": "7c785317",
    "metadata": {},
    "source": [
-    "The statistical anaylsis of the dataset has been successfully obtained. "
+    "####The statistical anaylsis of the dataset has been successfully obtained. "
    ]
   },
   {
@@ -163,13 +163,13 @@
    "id": "68c14163",
    "metadata": {},
    "source": [
-    "By working with this dataset, I've come to understand that even the products of the creative mind - art, music, etc- can be subjected to empirical analysis. \n",
+    "####By working with this dataset, I've come to understand that even the products of the creative mind - art, music, etc- can be subjected to empirical analysis. \n",
     "\n",
-    "Using data science methods we can even turn vague concepts such as 'likeability' and 'danceability' into numerical measures that can be studied and manipulated. \n",
+    "####Using data science methods we can even turn vague concepts such as 'likeability' and 'danceability' into numerical measures that can be studied and manipulated. \n",
     "\n",
-    "Given sufficient data and a proper study of said data, it might even become possible to 'manufacture' a hit, rather than leave it up to chance! I've come to realise that the value of data doesn't merely exist in 'what currently is' but rather what it represents for the future. \n",
+    "####Given sufficient data and a proper study of said data, it might even become possible to 'manufacture' a hit, rather than leave it up to chance! I've come to realise that the value of data doesn't merely exist in 'what currently is' but rather what it represents for the future. \n",
     "\n",
-    "All in all, I've come to better appreciate what it means to be a 'data scientist' or a 'data analyst.' It is more than simply studying numbers; it is studying the future. "
+    "####All in all, I've come to better appreciate what it means to be a 'data scientist' or a 'data analyst.' It is more than simply studying numbers; it is studying the future. "
    ]
   },
   {
